--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.1",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.7",
+    "dexie": "^3.2.3",
     "js-base64": "^3.7.5",
     "notiflix": "^3.2.5",
     "remixicon": "^2.5.0",
