--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "axios": "^1.2.1",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.7",
-    "dexie": "^3.2.3",
+    "dexie": "^4.0.1-alpha.10",
     "js-base64": "^3.7.5",
     "notiflix": "^3.2.5",
     "remixicon": "^2.5.0",
     "svelte-apexcharts": "^1.0.2",
     "svelte-navigator": "^3.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz"
   }
 }
