--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "moduleResolution": "Node",
     "target": "ESNext",
     "module": "ESNext",
+    "ignoreDeprecations": "5.0",
     /**
      * svelte-preprocess cannot figure out whether you have
      * a value or a type, so tell TypeScript to enforce using
@@ -29,5 +30,9 @@
    * Use global.d.ts instead of compilerOptions.types
    * to avoid limiting type declarations.
    */
-  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.svelte"
+  ]
 }
