--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "apexcharts": "^3.37.3",
     "axios": "^1.2.1",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.7",
